# xiaomi-speaker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build.yml  release.yml  test.yml
docs/: RELEASE_NOTES_v0.1.0.md  cloudflare-tunnel-setup.md  github-actions-examples.md
scripts/: download_voices.py
src/: __init__.py  config.py  main.py  server.py  static_server.py
src/api/: __init__.py  webhooks.py
src/services/: __init__.py  notification.py  notification_service.py  speaker.py  speaker_service.py  tts.py
src/utils/: language.py
tests/: conftest.py  test_api.py  test_language.py  test_notification.py  test_speaker.py  test_tts.py  test_webhooks_extended.py
