[project]
name = "xiaomi-speaker"
version = "0.1.0"
description = "GitHub notification system for Xiaomi speaker using MiService and Edge TTS"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.123.0",
    "uvicorn[standard]>=0.38.0",
    "edge-tts==7.2.3",
    "miservice-fork>=2.9.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.editable]
packages = ["src"]
